// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI/Button Testing should correct render background 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="ui-link__button hover regular background"
        data-testid="ui-button_button"
      >
        <a
          data-testid="ui-button_link"
          href="/en/link"
          target="_self"
        >
          <p
            data-testid="ui-button_paragraph"
          >
            Children
          </p>
          <p
            data-testid="ui-button_subtitle"
          >
            Subtitle
          </p>
        </a>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="ui-link__button hover regular background"
      data-testid="ui-button_button"
    >
      <a
        data-testid="ui-button_link"
        href="/en/link"
        target="_self"
      >
        <p
          data-testid="ui-button_paragraph"
        >
          Children
        </p>
        <p
          data-testid="ui-button_subtitle"
        >
          Subtitle
        </p>
      </a>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`UI/Button Testing should correct render default 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="ui-link__button hover regular default"
        data-testid="ui-button_button"
      >
        <a
          data-testid="ui-button_link"
          href="/en/link"
          target="_self"
        >
          <p
            data-testid="ui-button_paragraph"
          >
            Children
          </p>
          <p
            data-testid="ui-button_subtitle"
          >
            Subtitle
          </p>
        </a>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="ui-link__button hover regular default"
      data-testid="ui-button_button"
    >
      <a
        data-testid="ui-button_link"
        href="/en/link"
        target="_self"
      >
        <p
          data-testid="ui-button_paragraph"
        >
          Children
        </p>
        <p
          data-testid="ui-button_subtitle"
        >
          Subtitle
        </p>
      </a>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`UI/Button Testing should correct render large 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="ui-link__button hover large default"
        data-testid="ui-button_button"
      >
        <a
          data-testid="ui-button_link"
          href="/en/link"
          target="_self"
        >
          <p
            data-testid="ui-button_paragraph"
          >
            Children
          </p>
          <p
            data-testid="ui-button_subtitle"
          >
            Subtitle
          </p>
        </a>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="ui-link__button hover large default"
      data-testid="ui-button_button"
    >
      <a
        data-testid="ui-button_link"
        href="/en/link"
        target="_self"
      >
        <p
          data-testid="ui-button_paragraph"
        >
          Children
        </p>
        <p
          data-testid="ui-button_subtitle"
        >
          Subtitle
        </p>
      </a>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`UI/Button Testing should correct render light 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="ui-link__button hover regular light"
        data-testid="ui-button_button"
      >
        <a
          data-testid="ui-button_link"
          href="/en/link"
          target="_self"
        >
          <p
            data-testid="ui-button_paragraph"
          >
            Children
          </p>
          <p
            data-testid="ui-button_subtitle"
          >
            Subtitle
          </p>
        </a>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="ui-link__button hover regular light"
      data-testid="ui-button_button"
    >
      <a
        data-testid="ui-button_link"
        href="/en/link"
        target="_self"
      >
        <p
          data-testid="ui-button_paragraph"
        >
          Children
        </p>
        <p
          data-testid="ui-button_subtitle"
        >
          Subtitle
        </p>
      </a>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`UI/Button Testing should correct render regular 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="ui-link__button hover regular default"
        data-testid="ui-button_button"
      >
        <a
          data-testid="ui-button_link"
          href="/en/link"
          target="_self"
        >
          <p
            data-testid="ui-button_paragraph"
          >
            Children
          </p>
          <p
            data-testid="ui-button_subtitle"
          >
            Subtitle
          </p>
        </a>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="ui-link__button hover regular default"
      data-testid="ui-button_button"
    >
      <a
        data-testid="ui-button_link"
        href="/en/link"
        target="_self"
      >
        <p
          data-testid="ui-button_paragraph"
        >
          Children
        </p>
        <p
          data-testid="ui-button_subtitle"
        >
          Subtitle
        </p>
      </a>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`UI/Button Testing should correct render small 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="ui-link__button hover small default"
        data-testid="ui-button_button"
      >
        <a
          data-testid="ui-button_link"
          href="/en/link"
          target="_self"
        >
          <p
            data-testid="ui-button_paragraph"
          >
            Children
          </p>
          <p
            data-testid="ui-button_subtitle"
          >
            Subtitle
          </p>
        </a>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="ui-link__button hover small default"
      data-testid="ui-button_button"
    >
      <a
        data-testid="ui-button_link"
        href="/en/link"
        target="_self"
      >
        <p
          data-testid="ui-button_paragraph"
        >
          Children
        </p>
        <p
          data-testid="ui-button_subtitle"
        >
          Subtitle
        </p>
      </a>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`UI/Button Testing should correct render uppercase 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="ui-link__button hover regular default uppercase"
        data-testid="ui-button_button"
      >
        <a
          data-testid="ui-button_link"
          href="/en/link"
          target="_self"
        >
          <p
            data-testid="ui-button_paragraph"
          >
            Children
          </p>
          <p
            data-testid="ui-button_subtitle"
          >
            Subtitle
          </p>
        </a>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="ui-link__button hover regular default uppercase"
      data-testid="ui-button_button"
    >
      <a
        data-testid="ui-button_link"
        href="/en/link"
        target="_self"
      >
        <p
          data-testid="ui-button_paragraph"
        >
          Children
        </p>
        <p
          data-testid="ui-button_subtitle"
        >
          Subtitle
        </p>
      </a>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
